[package]
name = "openmobilemaps-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14.0"
# glium = "0.32.1"
glutin = {version = "0.30"}
image = "0.24.5"
lazy_static = "1.4.0"
tokio = {version = "1.26.0", features = ["full"]}
ureq = "2.6.2"
openmobilemaps-sys = { path = "./openmobilemaps-sys"}
polyline = "0.10.0"
imageproc = "0.23.0"
rusttype = "0.9.2"


glium = "0.32.1"
surfman = {version = "0.6.0", features = ["sm-x11", "sm-angle-builtin"]}
euclid = "0.22.7"
