[package]
name = "openmobilemaps-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14.0"
image = "0.24.5"
lazy_static = "1.4.0"
tokio = {version = "1.26", features = ["full"]}
ureq = "2.6.2"
openmobilemaps-sys = { path = "./openmobilemaps-sys"}
polyline = "0.10.0"
imageproc = "0.23.0"
rusttype = "0.9.2"
surfman = {version = "0.6.0", features = ["sm-x11", "sm-angle-builtin"]}
euclid = "0.22.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo-types = "0.7.9"
serde_urlencoded = "0.7.1"
resvg = "0.29.0"
