[package]
name = "openmobilemaps-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14.0"
lazy_static = "1.4.0"
tokio = {version = "1.26", features = ["full"]}
ureq = "2.6.2"
openmobilemaps-sys = { path = "./openmobilemaps-sys"}
surfman = {version = "0.6.0"}
anyhow = "1.0.70"
log = "0.4.17"
euclid = "0.22.7"