[package]
name = "openmobilemaps-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.25.0"
autocxx-macro = "0.25.0"
cxx = "1.0"
gl = "0.14.0"
image = "0.24.5"
lazy_static = "1.4.0"
log = "0.4.17"
tokio = {version = "1.26.0", features = ["full"]}
ureq = "2.6.2"
url = "2.3.1"


[build-dependencies]
autocxx-build = "0.25.0"
miette = { version = "5", features = ["fancy"] }
cc = { version = "1.0.79", features = ["parallel"]}
cxx-build = "1.0"
