[package]
name = "openmobilemaps-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmobilemaps-bindings = {path = "../openmobilemaps-bindings"}
[build-dependencies]
cc = { version = "1.0.79", features = ["parallel"]}
glob = "0.3.1"
